# wcurses

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_gcc.sh  build_mingw.bat  build_vs_17.bat
include/ncurses/: term.h
include/wcurses/: Buffer.h  ColorManager.h  Cursor.h  InputManager.h  Key.h  Point.h  Terminal.h  Wcurses.h  buffer.h  color_manager.h  cursor.h  input_manager.h  key.h  point.h  structures.h  terminal.h  wcurses.h
lib/vc17/Debug/: wcurses_d.lib
lib/vc17/Release/: wcurses.lib
lib/windows/msvc/: wcurses.lib
lib/windows/msvc/Debug/: wcurses.lib
lib/windows/msvc/Release/: wcurses.lib
lib/windows/msvc/lib/: wcurses.lib
src/: Buffer.cpp  ColorManager.cpp  Cursor.cpp  InputManager.cpp  Terminal.cpp  Wcurses.cpp  buffer.cc  color_manager.cc  cursor.cc  input_manager.cc  terminal.cc  wcurses.cc
